# lektra

./: .clang-format  .gitignore  .gitmodules  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LUA-WIKI.md  PKGBUILD  README.md  TODO.md  build_appimage.sh  build_deb.sh  build_dmg.sh  build_gz.sh  build_mupdf.sh  build_release.sh  config.toml  configure  configure.bat  default_config.toml  flake.nix  install.sh  lektra-template.desktop.in  resources.qrc  tutorial.tex  uninstall  uninstall.sh  uninstall_dodo.sh
.gitea/issue_template/: bug_report.yaml  feature_request.yaml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: appimage.yml
.woodpecker/: appimage.yml  build.yml  lint.yml
Translations/: lektra.en.ts  lektra.en_US.ts  lektra.es.ts  lektra.es_ES.ts  lektra.ts
cmake/: Info.plist.in
docs/man/: lektra.1  lektra.1.md
include/: AboutDialog.hpp  AppPaths.hpp  Bookmark.hpp  BookmarkManager.hpp  BookmarkPicker.hpp  BrowseLinkItem.hpp  CircleLabel.hpp  CommandManager.hpp  CommandPicker.hpp  Commands.hpp  CommentPopupButton.hpp  CommentSearchPicker.hpp  Config.hpp  DispatchType.hpp  DocumentContainer.hpp  DocumentView.hpp  EditLastPagesWidget.hpp  ElidableLabel.hpp  FilePicker.hpp  FloatingOverlayWidget.hpp  GraphicsImageItem.hpp  GraphicsPixmapItem.hpp  GraphicsScene.hpp  GraphicsView.hpp  HighlightSearchPicker.hpp  InputDialog.hpp  JumpMarker.hpp  LRUCache.hpp  Lektra.hpp  LinkHint.hpp  MarkManager.hpp  MessageBar.hpp  Model.hpp  OutlinePicker.hpp  PageLocation.hpp  Picker.hpp  PlaceholderWidget.hpp  PropertiesWidget.hpp  RecentFilesModel.hpp  RecentFilesPicker.hpp  (+11 more)
include/Annotations/: HighlightAnnotation.hpp  PopupAnnotation.hpp  RectAnnotation.hpp
include/Commands/: AnnotColorCommand.hpp  AnnotCommentCommand.hpp  DeleteAnnotationsCommand.hpp  RectAnnotationCommand.hpp  TextAnnotationCommand.hpp  TextHighlightAnnotationCommand.hpp
include/LLM/http/: HttpStreamClient.hpp
include/lua/: LuaPicker.hpp
scripts/: commands.json  doc_commands.py  doc_config.py  doc_lua_api.py  generate_large_pdf.py  make_mixed_pages.py
src/: AboutDialog.cpp  AboutDialog.hpp  Annotation.cpp  AppPaths.cpp  AppPaths.hpp  Bookmark.cpp  Bookmark.hpp  BookmarkManager.cpp  BookmarkPicker.cpp  BrowseLinkItem.hpp  ColorDialog.cpp  CommandManager.hpp  CommandPaletteWidget.cpp  CommandPaletteWidget.hpp  CommandPicker.cpp  CommandPicker.hpp  Config.hpp  DocumentContainer.cpp  DocumentContainer.hpp  DocumentView.cpp  DocumentView.hpp  EditLastPagesWidget.cpp  FilePicker.cpp  GraphicsImageItem.hpp  GraphicsView.cpp  GraphicsView.hpp  HighlightSearchPicker.cpp  HighlightSearchPicker.hpp  InputDialog.hpp  JumpMarker.hpp  LRUCache.hpp  Lektra.cpp  Lektra.hpp  MarkManager.hpp  MessageBar.cpp  Model.cpp  Model.hpp  MouseBindKey.hpp  OutlineModel.hpp  OutlinePicker.cpp  (+25 more)
src/.lupdate/: lektra_lupdate_project.cmake
src/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
src/Annotations/: Annotation.cpp  Annotation.hpp  CommentPopupButton.hpp  HighlightAnnotation.hpp  PopupAnnotation.hpp  RectAnnotation.hpp
src/Commands/: AnnotCommentCommand.hpp  DeleteAnnotationsCommand.hpp  RectAnnotationCommand.hpp  TextAnnotationCommand.hpp  TextHighlightAnnotationCommand.hpp
src/LLM/: LLMWidget.cpp  LLMWidget.hpp  role.txt
src/LLM/http/: HttpStreamClient.cpp  HttpStreamClient.hpp
src/LLM/providers/: LLMProvider.cpp  LLMProvider.hpp
src/LLM/providers/ollama/: OllamaProvider.cpp  OllamaProvider.hpp
src/Translations/: lektra.es.ts  lektra.ts
src/lua/: Lektra.cpp  LuaPicker.cpp  cmd.cpp  event.cpp  keymap.cpp  mousemap.cpp  opt.cpp  tabs.cpp  timer.cpp  ui.cpp  view.cpp  views.cpp
stubs/lua/: cmd.lua  event.lua  lektra.lua  opt.lua  tabs.lua  ui.lua  view.lua
